# MtGRansac

./: LICENSE.md  README.md
examples/: CMakeLists.txt  FittingExample.cpp  LineModel.hpp  PlaneModel.hpp
include/: RANSAC.hpp
